# hearts-engine

./: .bazelrc  .gitignore  CLAUDE.md  CMakeLists.txt  HANDOFF.md  MODULE.bazel  README.md  TOURNAMENT_PROTOCOL.md  bench  benchmark_tournament.py  competition_runner.py  config.env  local.config.env  main  main.cpp  register_team.py  resource_guard.py  run.sh  setup.sh  tournament.config.env  tournament_server.env  tune_acceptable_failures.py
.clwb/: .bazelproject
.github/workflows/: c-cpp.yml  gtests.yml  integration.yml  server.yml  web.yml
.idea_bkup/: .name  vcs.xml
clients/: README.md
clients/cpp/: README.md
clients/cpp/players/: BUILD  random_player.h  random_player_main.cpp
clients/cpp/sdk/: BUILD  card.h  card_set.h  client.h  env.h  game_runner.h  player.h  protocol.h  session.h  tcp_channel.h  transport.h
clients/cpp/tests/: BUILD  card_test.cpp  game_runner_test.cpp  mock_channel.h  protocol_test.cpp
clients/python/: ActiveGameFlow.py  Connection.py  GameSession.py  Player.py  README.md  TableGameFlow.py  api.py  constants.py  lobby_client.py  player_debugger.py  random_player.py  tournament_client.py
clients/python/api/: ActiveGameFlow.py  Connection.py  Game.py  GameSession.py  ManagedConnection.py  Player.py  PlayerGameSession.py  Round.py  Trick.py
clients/python/player/: Game.py  Messenger.py  Player.py  Round.py  Trick.py
clients/python/players/: Player.py  aggressive_moon_shooter_player.py  (+30 more)
game/: card.h  card_collection.h  constants.h  deal.h  game.h  player.h  round.h  trick.h  types.h
game/objects/: card.h  card_collection.h  player.h  types.h
scripts/: audit_adaptive.py  bench.py  dns_sync.py  duel.py  env_vars.sh  four_way.py  install_bazel.sh  install_boost.sh  install_gtest.sh  install_json.sh  mcts_vs_tim.py  run_server.sh  tune.py
server/: BUILD  connection.h  constants.h  matcher.h  message.h  remote_player.h  server.cpp  tournament_server.cpp  types.h
server/api/: BUILD  connection.h  game_session.h  managed_connection.h  message.h
server/game/: BUILD  game.h  game_observer.h  game_recorder.h  remote_player.h  round.h  trick.h
server/matching/: BUILD  live_game.h  lobby.h  matcher.h
server/messages/: message.h  message.proto
server/util/: BUILD  assertions.h  constants.h  dates.h  death.h  env.h  logging.h  types.h  validation.h
tests/: BUILD  card_collection_gtest.cpp  competition_test.py  integration_test.py  player_debugger_test.py  probability_table_test.py  resource_guard_test.py  round_gtest.cpp  sdk_resilience_test.py  table_game_inference_test.py  table_game_test.py  table_game_web_test.py  tournament_test.py  tournament_timing_test.py  trick_gtest.cpp  validation_gtest.cpp
tests/mocks/: BUILD  mock_player.h  mock_trick.h
tools/bench_runner/: BUILD  bench_runner.cpp  local_player.h  logging_player_proxy.h  py_bridge_player.h
util/: assertions.h  dates.h  death.h  env.h  logging.h
web/: .gitignore  Caddyfile  run_web.sh
web/backend/: auth.py  live.py  main.py  results.py  table.py
web/frontend/: DESIGN.md  index.html  package-lock.json  package.json  vite.config.ts
(+85 files in other folders)
