module(
    name = "hearts_engine",
    version = "1.0",
)

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")
bazel_dep(name = "protobuf", version = "34.0.bcr.1")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "boost.asio", version = "1.90.0.bcr.1")
